--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "watch": "npm-run-all --parallel watch:*",
     "serve": "browser-sync start --server public --files public",
     "start": "npm-run-all copy --parallel watch serve",
-    "build": "npm-run-all copy:html build:*",
-    "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
+    "build": "npm-run-all copy:html build:*"
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
